k3s/immich-power-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-power-tools
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich-tools.d-kline.org`)
      kind: Rule
      services:
        - name: immich-power-tools
          port: 3000
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls: {}
